# hots-parser

./: .gitattributes  .gitignore  .gitmodules  LICENSE  PARSER_MODERNIZATION_EXEC_PLAN.md  README.md  credentials.json  hotsparser.py  main.py  protocol_loader.py  pyproject.toml  requirements.txt
data/: __init__.py  abilities.py  ability_catalog_97039.py  ability_link_candidates_97039.py  skillshot_landing_rule_sets.py  skillshot_landing_rules.py  skillshot_landing_rules_97039.py
database/: bootstrap_roles.sql  database_schema.sql
docs/skillshot_rules/: README.md  SKILLSHOT_AUTOMATION_EXEC_PLAN.md  coverage_97039.json  skillshot_candidate_status_97039.csv  skillshot_candidate_status_97039.md  subagent_batches.md  subagent_consolidation_97039.md  wiki_ability_sources_97039.json  wiki_triage_97039.json  wiki_triage_report_97039.md
helpers/: __init__.py
hots_parser/: __init__.py
models/: __init__.py
replay/: __init__.py  skillshot_landing.py
replay/heroesofthedorm/: replays.txt
scripts/: generate_ability_catalog.py  generate_ability_link_candidates.py  generate_golden.py  replay_ability_report.py  replay_corpus_report.py  skillshot_rule_pipeline.py
tests/: test_ability_names.py  test_ci_replay_fixture.py  test_dump_payloads.py  test_golden_outputs.py  test_postgres_persistence.py  test_replay_ability_report.py  test_skillshot_landing.py  test_skillshot_rule_pipeline.py
tests/data/: test_abilities.py  test_ability_link_candidates.py  test_data.py
tests/support/: normalization.py
utils/: __init__.py  db.py  payloads.py  pg_persistence.py
(+17 files in other folders)
